<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawerLayoutAddRecord"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    tools:context=".AddRecords"
    tools:openDrawer="end">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolBar1"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/colorPrimary"
            android:elevation="4dp"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

        <FrameLayout
            android:id="@+id/fragmentContainerAddData"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="589dp">

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="50dp"
                    android:fontFamily="@font/oswald"
                    android:text="@string/item_name"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/txt_itemName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:layout_marginTop="35dp"
                    android:layout_toEndOf="@+id/textView"
                    android:ems="10"
                    android:hint="@string/item_name"
                    android:inputType="text" />

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/textView"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="30dp"
                    android:fontFamily="@font/oswald"
                    android:text="@string/expire_date"
                    android:textStyle="bold" />


                <EditText
                    android:id="@+id/editDate"
                    android:layout_width="210dp"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/txt_itemName"
                    android:layout_marginStart="30dp"
                    android:layout_marginLeft="30dp"
                    android:layout_marginTop="7dp"
                    android:layout_toEndOf="@+id/textView3"
                    android:layout_toRightOf="@+id/textView3"
                    android:hint="@string/expire_date"
                    android:onClick="openDate" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_insert"
                    android:layout_width="172dp"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/editDate"
                    android:layout_marginHorizontal="30dp"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="14dp"
                    android:padding="15dp"
                    android:text="Insert"
                    android:textStyle="bold"
                    app:backgroundTint="@color/light_blue_600"
                    app:cornerRadius="20dp"
                    app:elevation="10dp" />

                <ListView
                    android:id="@+id/txt_list"
                    android:layout_width="match_parent"
                    android:layout_height="380dp"
                    android:layout_below="@+id/btn_insert"
                    android:layout_marginTop="10dp"
                    android:isScrollContainer="true"
                    android:padding="5dp" />


                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_edit"
                    android:layout_width="127dp"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/editDate"
                    android:layout_alignParentEnd="true"
                    android:layout_marginHorizontal="30dp"
                    android:layout_marginStart="15dp"
                    android:layout_marginLeft="96dp"
                    android:layout_marginTop="14dp"
                    android:layout_marginEnd="43dp"
                    android:layout_toRightOf="@+id/btn_insert"
                    android:letterSpacing="0"
                    android:padding="15dp"
                    android:text="@string/edit_data"
                    android:textStyle="bold"
                    app:backgroundTint="@color/light_blue_600"
                    app:cornerRadius="20dp"
                    app:elevation="10dp" />


            </RelativeLayout>


        </FrameLayout>

    </LinearLayout>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/nav_view1"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:headerLayout="@layout/nav_header"
        app:menu="@menu/drawer_menu" />


</androidx.drawerlayout.widget.DrawerLayout>